Fix embedded alignments;

--- a/sass/utilities/_alignments.scss
+++ b/sass/utilities/_alignments.scss
@@ -25,5 +25,6 @@
 
   .wp-block-embed__wrapper {
     display: flex;
+    justify-content: center;
   }
 }
